Feedback from Alisdair Meredith (need to be applied to code)
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -35,13 +35,14 @@
 {\bf Date: } 2016-03-08 \\
 {\bf Reply to: } Paul E. McKenney, Torvald Riegel, Jeff Preshing, \\
 	Hans Boehm, Clark Nelson, Olivier Giroux, Lawrence Crowl, \\
-	and JF Bastien \\
+	JF Bastien, and Micheal Wong \\
 {\bf Email: } paulmck@linux.vnet.ibm.com, triegel@redhat.com,
 jeff@preshing.com \\
 boehm@acm.org, clark.nelson@intel.com, OGiroux@nvidia.com, \\
-Lawrence@Crowl.org, and cxx@jfbastien.com \\ ~ \\
+Lawrence@Crowl.org, cxx@jfbastien.com, and fraggamuffin@gmail.com \\ ~ \\
 {\bf Other contributors: }
 	Alec Teal,
+	Alisdair Meredith,
 	David Howells,
 	David Lang,
 	George Spelvin, \\
