--- a/markfunc.tex
+++ b/markfunc.tex
@@ -5,7 +5,7 @@ a keyword (for example, something like
 \co{_FunctionCarriesDependencies}).
 
 Proper use of this approach eliminates issues with dependencies passing
-through dependency-unaware code.
+through dependency-unaware code: Simply mark the relevant functions.
 However, although there are many software-engineering reasons for
 preferring small functions, the fact remains that large functions
 are not uncommon in production code.
