Update JF Bastien's email address and adjust doc header
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -28,7 +28,7 @@
 }
 \newcommand{\co}[1]{\lstinline[breaklines=yes,breakatwhitespace=yes]{#1}}
 
-\title{P0462R0: Marking {\tt memory\_order\_consume} Dependency Chains}
+\title{P0462R0:\\ Marking {\tt memory\_order\_consume} Dependency Chains}
 
 \author{
 {\bf Doc. No.: } WG21/P0462R0 \\
@@ -39,24 +39,24 @@
 {\bf Email: } paulmck@linux.vnet.ibm.com, triegel@redhat.com,
 jeff@preshing.com \\
 boehm@acm.org, clark.nelson@intel.com, OGiroux@nvidia.com, \\
-Lawrence@Crowl.org, cxx@jfbastien.com, and fraggamuffin@gmail.com \\ ~ \\
+Lawrence@Crowl.org, jfbastien@apple.com, and fraggamuffin@gmail.com \\ ~ \\
 {\bf Other contributors: }
 	Alec Teal,
 	Alisdair Meredith,
 	David Howells,
-	David Lang,
-	George Spelvin, \\
+	David Lang \\,
+	George Spelvin,
 	Jeff Law,
 	Joseph S. Myers,
 	Linus Torvalds,
 	Mark Batty,
-	Michael Matz,
-	Peter Sewell, \\
+	Michael Matz, \\
+	Peter Sewell,
 	Peter Zijlstra,
 	Ramana Radhakrishnan,
 	Richard Biener,
-	Will Deacon,
-	Faisal Vali, \\
+	Will Deacon, \\
+	Faisal Vali,
 	Behan Webster,
 	Tony Tye,
 	Thomas Koeppe,
