--- a/markconsume.tex
+++ b/markconsume.tex
@@ -32,7 +32,7 @@
 
 \author{
 {\bf Doc. No.: } WG21/P0462R0 \\
-{\bf Date: } 2016-03-08 \\
+{\bf Date: } 2016-10-13 \\
 {\bf Reply to: } Paul E. McKenney, Torvald Riegel, Jeff Preshing, \\
 	Hans Boehm, Clark Nelson, Olivier Giroux, Lawrence Crowl, \\
 	JF Bastien, and Micheal Wong \\
@@ -69,7 +69,7 @@ Lawrence@Crowl.org, jfbastien@apple.com, and fraggamuffin@gmail.com \\ ~ \\
 %\thispagestyle{empty}
 
 \pagestyle{myheadings}
-\markright{WG21/D0098R1}
+\markright{WG21/P0462R0}
 
 \maketitle
 
