Switch to one-column mode to ease presentation from the paper
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,twocolumn,10pt]{article}
+\documentclass[letterpaper,10pt]{article}
 \usepackage{epsfig,endnotes}
 %\usepackage{usenix,epsfig}
 
