--- a/markconsume.tex
+++ b/markconsume.tex
@@ -120,12 +120,21 @@ These points result in three known valid ways of handling
 \begin{enumerate}
 \item	Ignore the markings and promote \co{memory_order_consume}
 	to \co{memory_order_acquire}, as is current practice.
-\item	Ignore the markings, demote \co{memory_order_consume} to
+\item	Ignore the markings, and on platforms other than DEC Alpha,\footnote{
+	DEC Alpha systems require that each \co{memory_order_consume} loads
+	be followed by full memory-barrier instructions if there are any
+	loads that depend on the \co{memory_order_consume}
+	load.~\cite{Compaq01,ALPHA95}.
+	Therefore, on DEC Alpha we recommend promoting
+	\co{memory_order_consume} loads to \co{memory_order_acquire}.}
+	emit the same code for
+	\co{memory_order_consume} as is emitted for
 	\co{memory_order_relaxed}, and suppress troublesome
 	optimizations of pointers.
 	However, there was some difficulty in arriving at a precise
 	definition of ``troublesome''.
-\item	Demote \co{memory_order_consume} to \co{memory_order_relaxed}
+\item	On platforms other than DEC Alpha, emit the same code for
+	\co{memory_order_consume} as is emitted for \co{memory_order_relaxed}
 	and suppress troublesome optimizations of marked pointers.
 	The fact that such optimizations need not be suppressed
 	for unmarked pointers means that a much more conservative
