Fix front matter for new single-column format
Signed-off-by: Paul E. McKenney <paulmck@linux.vnet.ibm.com>

--- a/markconsume.tex
+++ b/markconsume.tex
@@ -36,28 +36,28 @@
 {\bf Reply to: } Paul E. McKenney, Torvald Riegel, Jeff Preshing, \\
 	Hans Boehm, Clark Nelson, Olivier Giroux, Lawrence Crowl, \\
 	JF Bastien, and Micheal Wong \\
-{\bf Email: } paulmck@linux.vnet.ibm.com, triegel@redhat.com,
-jeff@preshing.com \\
-boehm@acm.org, clark.nelson@intel.com, OGiroux@nvidia.com, \\
-Lawrence@Crowl.org, jfbastien@apple.com, and fraggamuffin@gmail.com \\ ~ \\
+{\bf Email: } paulmck@linux.vnet.ibm.com, triegel@redhat.com, \\
+jeff@preshing.com, boehm@acm.org, clark.nelson@intel.com, \\
+OGiroux@nvidia.com, Lawrence@Crowl.org, jfbastien@apple.com, \\
+and fraggamuffin@gmail.com \\ ~ \\
 {\bf Other contributors: }
 	Alec Teal,
-	Alisdair Meredith,
+	Alisdair Meredith, \\
 	David Howells,
-	David Lang \\,
+	David Lang,
 	George Spelvin,
-	Jeff Law,
+	Jeff Law, \\
 	Joseph S. Myers,
 	Linus Torvalds,
 	Mark Batty,
 	Michael Matz, \\
 	Peter Sewell,
 	Peter Zijlstra,
-	Ramana Radhakrishnan,
+	Ramana Radhakrishnan, \\
 	Richard Biener,
-	Will Deacon, \\
+	Will Deacon,
 	Faisal Vali,
-	Behan Webster,
+	Behan Webster, \\
 	Tony Tye,
 	Thomas Koeppe,
 	Jens Maurer,
