--- a/bib/realtime.bib
+++ b/bib/realtime.bib
@@ -7,7 +7,7 @@
 ,number = {9}
 ,year = {1990}
 ,pages = {1175-1185}
-,doi = {doi:10.1109/12.57058}
+,doi = {10.1109/12.57058}
 ,publisher = {IEEE}
 ,address = {New York, NY, USA}
 }
@@ -49,7 +49,7 @@
 ,year = {2003}
 ,issn = {0362-1340}
 ,pages = {285--298}
-,doi = {http://doi.acm.org/10.1145/640128.604155}
+,doi = {10.1145/640128.604155}
 ,publisher = {ACM}
 ,address = {New York, NY, USA}
 }
