--- a/bib/syncrefs.bib
+++ b/bib/syncrefs.bib
@@ -79,7 +79,7 @@ Brent A Kingsbury"
 ,isbn = {1-59593-080-9}
 ,pages = {26--35}
 ,location = {Chicago, IL, USA}
-,doi = {http://doi.acm.org/10.1145/1065944.1065949}
+,doi = {10.1145/1065944.1065949}
 ,publisher = {ACM Press}
 ,address = {New York, NY, USA}
 }
@@ -523,7 +523,7 @@ Georgia Institute of Technology"
 ,pages = {40--44}
 ,numpages = {5}
 ,url = {http://doi.acm.org/10.1145/1435417.1435432}
-,doi = {http://doi.acm.org/10.1145/1435417.1435432}
+,doi = {10.1145/1435417.1435432}
 ,acmid = {1435432}
 ,publisher = {ACM}
 ,address = {New York, NY, USA}
@@ -891,7 +891,7 @@ Georgia Institute of Technology"
 ,year = {1980}
 ,issn = {0001-0782}
 ,pages = {105-117}
-,doi = {http://doi.acm.org/10.1145/358818.358824}
+,doi = {10.1145/358818.358824}
 ,publisher = {ACM Press}
 ,address = {New York, NY, USA}
 }
@@ -905,7 +905,7 @@ Georgia Institute of Technology"
 ,year = {1990}
 ,issn = {0018-9340}
 ,pages = {1175--1185}
-,doi = {http://dx.doi.org/10.1109/12.57058}
+,doi = {10.1109/12.57058}
 ,publisher = {IEEE Computer Society}
 ,address = {Washington, DC, USA}
 }
@@ -1198,13 +1198,13 @@ Simple Locks in a Multiprocessor System"
 ,isbn = {978-1-60558-606-9}
 ,pages = {101--110}
 ,location = {Calgary, AB, Canada}
-,doi = {http://doi.acm.org/10.1145/1583991.1584020}
+,doi = {10.1145/1583991.1584020}
 ,publisher = {ACM}
 ,address = {New York, NY, USA}
 }
 
 @inproceedings{SilasBoyd-Wickizer2012scalablelocks
-,author="Silas Boyd-Wickizer and M. Frans Kaashoek and Robert Morris and and Nickolai Zeldovich"
+,author="Silas Boyd-Wickizer and M. Frans Kaashoek and Robert Morris and Nickolai Zeldovich"
 ,title="Non-scalable locks are dangerous"
 ,booktitle="Proceedings of the Linux Symposium (OLS 2012)"
 ,pages={???-???}
@@ -1288,6 +1288,16 @@ Parallel Server on UNIX"
 ,Year="1987"
 ,Month="September"
 ,journal="??????????"
+}
+
+@unpublished{HansBoehm2012seqlockC11
+,author="Hans-J. Boehm"
+,title="Can Seqlocks Get Along With Programming Language Memory Models?"
+,Year="2012"
+,Month="June"
+,Day="6"
+,Note="HPL-2012-68"
+,url={http://www.hpl.hp.com/techreports/2012/HPL-2012-68.pdf}
 }
 
 
