--- a/bib/RCU.bib
+++ b/bib/RCU.bib
@@ -2331,15 +2331,30 @@ Hans Boehm and Clark Nelson and Olivier Giroux"
 ,note="\url{http://lwn.net/Articles/629742/}"
 }
 
+@unpublished{PaulEMcKenney2015DagstuhlFormalVerifRCU
+,Author="Paul E. McKenney"
+,Title="Formal Verification and Linux-Kernel Concurrency"
+,month="May"
+,day="3"
+,year="2015"
+,note="\url{http://materials.dagstuhl.de/files/15/15191/15191.PaulMcKenney.Slides.pdf}"
+}
+
 @Conference{JosephTassarotti2015RCUproof
 ,Author="Joseph Tassarotti and Derek Dreyer and Victor Vafeiadis"
 ,Title="Verifying Read-Copy-Update in a Logic for Weak Memory"
 ,Booktitle="Proceedings of the 2015 Proceedings of the 36\textsuperscript{th}
 annual ACM SIGPLAN conference on Programming Language Design and Implementation"
-,Publisher="ACM"
+,series = {PLDI '15}
 ,year="2015"
 ,month="June"
-,pages="xxx-yyy"
+,pages="110--120"
+,url = {http://doi.acm.org/10.1145/2737924.2737992}
+,doi = {10.1145/2737924.2737992}
+,acmid = {2737992}
+,Publisher="ACM"
+,address = {New York, NY, USA}
+,isbn = {978-1-4503-3468-6}
 }
 
 @unpublished{PaulEMcKenney2015NoRCUArrayIndex
@@ -2520,7 +2535,7 @@ Speculation"
 ,note="\url{https://lwn.net/Kernel/Index/#Read-copy-update}"
 }
 
-@unpublished{LihaoLiang2016VerifyTreeRCU
+@techreport{LihaoLiang2016VerifyTreeRCU
 ,Author="Lihao Liang and Paul E. McKenney and Daniel Kroening and Tom Melham"
 ,Title="Verification of the Tree-Based Hierarchical Read-Copy Update in the Linux Kernel"
 ,month="October"
