--- a/bib/syncrefs.bib
+++ b/bib/syncrefs.bib
@@ -1,5 +1,42 @@
 
 
+@inproceedings{Lu:2008:LMC:1346281.1346323
+,author = {Lu, Shan and Park, Soyeon and Seo, Eunsoo and Zhou, Yuanyuan}
+,title = {Learning from Mistakes: A Comprehensive Study on Real World Concurrency Bug Characteristics}
+,booktitle = {Proceedings of the 13th International Conference on Architectural Support for Programming Languages and Operating Systems}
+,series = {ASPLOS XIII}
+,year = {2008}
+,isbn = {978-1-59593-958-6}
+,location = {Seattle, WA, USA}
+,pages = {329--339}
+,numpages = {11}
+,url = {http://doi.acm.org/10.1145/1346281.1346323}
+,doi = {10.1145/1346281.1346323}
+,acmid = {1346323}
+,publisher = {ACM}
+,address = {New York, NY, USA}
+,keywords = {bug characteristics, concurrency bug, concurrent program}
+}
+
+@inproceedings{Zhou:2015:PCB:2745802.2745807
+,author = {Zhou, Bo and Neamtiu, Iulian and Gupta, Rajiv}
+,title = {Predicting Concurrency Bugs: How Many, What Kind and Where Are They?}
+,booktitle = {Proceedings of the 19th International Conference on Evaluation and Assessment in Software Engineering}
+,series = {EASE '15}
+,year = {2015}
+,isbn = {978-1-4503-3350-4}
+,location = {Nanjing, China}
+,pages = {6:1--6:10}
+,articleno = {6}
+,numpages = {10}
+,url = {http://doi.acm.org/10.1145/2745802.2745807}
+,doi = {10.1145/2745802.2745807}
+,acmid = {2745807}
+,publisher = {ACM}
+,address = {New York, NY, USA}
+}
+
+
 @article{Ellis80
 ,author="Carla Schlatter Ellis"
 ,title="Concurrent Search and Insertion in AVL Trees"
